# quick-assistant

./: .gitignore  AGENTS.md  Cargo.toml  README.md  setup.sh
.github/workflows/: rust.yml
assistant_v2/: Cargo.toml  FEATURE_PROGRESS.md  OUTLINE.md  README.md
assistant_v2/src/: code_interpreter.rs  main.rs  record.rs  transcribe.rs
input/: CASTHPI.csv
src/: convert.rs  default_device_sink.rs  main.rs  options.rs  record.rs  speak_stream_ext.rs  speakstream.rs  timers.rs  transcribe.rs  web_search.rs  windows_focus.rs  windows_volume.rs
