[package]
name = "quick-assistant"
version = "0.1.0"
edition = "2021"
default-run = "quick-assistant"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-openai = "0.25.0 "
async-std = "1.12.0"
clap = { version = "4.4.6", features = ["derive"] }
cpal = "0.15.2"
dotenvy = "0.15.7"
enigo = "0.1.3"
flume = "0.11.0"
hound = "3.5.1"
rdev = "0.5.3"
tempfile = "3.8.0"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
colored = "2.0.4"
rodio = "0.17.3"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
slint = "1.4.1"
slint-build = "1.4.1"
serde_json = "1.0.114"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
dirs = "5.0.1"
open = "5.3.1"
