[package]
name = "assistant_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.3"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1.0"
anyhow = "1.0"
