[package]
name = "assistant_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.28.3"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15.7"
speakstream = "0.4.3"
flume = "0.11"
rdev = "0.5.3"
cpal = "0.15.2"
hound = "3.5.1"
uuid = { version = "1.6.1", features = ["v4"] }
tempfile = "3.10.1"
tracing = "0.1"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
clipboard = "0.5.0"
open = "5.3.1"
sysinfo = "0.32.1"
enigo = "0.1.3"
